--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
-body {
+h1,h2,p{
+    margin: 0;
+    padding: 0;
+}
 
-    background-image: url(b28cd260115cb.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+.header-container{
+   display: flex;
+   justify-content: center;
+    background-color: red;
+}
 
+.body-container{
+    background-color: blue;
+}
+
+.main-container {
+    display: flex;
+    justify-content: space-evenly ;
+
+}
+
+.top-container {
+    width: 48%;
+    margin-bottom: 1rem;
+}
+
+.bottom-container {
+    width: 48%;
+}
+
+.elements-container{
+    background-color: green;
+    margin-top:20px;
+
+    img {
+        width: 100%;
+    }
 }
 
